# TurboLndTest

./: .gitignore  App.tsx  app.json  package.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/turbolnd/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/TurboLnd/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/TurboLnd.xcodeproj/: project.pbxproj
ios/TurboLnd.xcodeproj/xcshareddata/xcschemes/: TurboLnd.xcscheme
ios/TurboLnd.xcworkspace/: contents.xcworkspacedata
ios/TurboLndTests/: TurboLndTests.m
lnd/: liba.h  liblnd.h
proto/: lightning.d.ts
protoc-generator/: gen_bindings.sh  package.json  protoc-gen-cpp-functions.js  protoc-gen-cpp-functions.ts
tm/: CMakeLists.txt  CallbackKeeper.h  Function.h  NativeSampleModule.cpp  NativeSampleModule.h  NativeSampleModule.ts  NativeSampleModuleCxx.cpp  NativeSampleModuleCxx.h  NativeSampleModuleCxx.podspec  NativeSampleModuleCxx.ts  Promise.h  PromiseKeeper.h  WritableStreamHostObject.h  base64.h  liblnd.h  log.h
